# Scribe

./: .gitignore  AI_ENGINEERING_STRATEGY.md  CONTRIBUTING.md  README.md  package.json
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/examples/: text_engine_metrics.rs
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/commands/: mod.rs
backend/src/application/runtime/: editor_runtime.rs  mod.rs
backend/src/application/services/: editor_service.rs  mod.rs
backend/src/application/state/: document_store.rs  mod.rs  viewport_store.rs
backend/src/domain/document/: change_set.rs  cursor.rs  document.rs  edit.rs  error.rs  history.rs  ids.rs  line_index.rs  mod.rs  newline.rs  piece_table.rs  piece_tree.rs  position.rs  selection.rs  tests.rs  text_buffer.rs  text_snapshot.rs
backend/src/infrastructure/filesystem/: mod.rs
backend/src/interface/ipc/dto/: mod.rs
backend/src/interface/ipc/handlers/: mod.rs
backend/src/tests/: editor_runtime.rs  editor_service.rs  editor_service_errors.rs  ipc.rs  mod.rs  recovery.rs  support.rs  viewport.rs
docs/architecture/: editor-ipc-contract.md  performance-contract.md  project-structure.md
docs/decisions/: 0001-adopt-piece-table-text-buffer.md  0002-adopt-piece-tree-for-performance-core.md  README.md
docs/domain/: README.md  current-text-engine-hotspots.md  editing-history-and-selection.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
scripts/: build.mjs  run.mjs  run.sh
(+25 files in other folders)
