[package]
name = "scribe_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "scribe_backend"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
